// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
      Object {
        "name": "pytest",
        "type": "devenv",
        "version": "6.2.1",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "test-python-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "test-python-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "test-python-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "test-python-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "test-python-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "test-python-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "test-python-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "test-python-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "test-python-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "test-python-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "test-python-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "test-python-project/Logger",
        },
        "Pip": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pip",
          "path": "test-python-project/Pip",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "test-python-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "test-python-project/Projenrc",
        },
        "Pytest": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pytest",
          "path": "test-python-project/Pytest",
        },
        "PytestSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PytestSample",
          "path": "test-python-project/PytestSample",
        },
        "PythonSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PythonSample",
          "path": "test-python-project/PythonSample",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "test-python-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "test-python-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "test-python-project/Tasks",
        },
        "Venv": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Venv",
          "path": "test-python-project/Venv",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "test-python-project/VsCode",
        },
        "requirements-dev.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements-dev.txt",
          "path": "test-python-project/requirements-dev.txt",
        },
        "requirements.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements.txt",
          "path": "test-python-project/requirements.txt",
        },
        "test_python_project": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "test_python_project",
          "path": "test-python-project/test_python_project",
        },
        "tests": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "tests",
          "path": "test-python-project/tests",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "test-python-project",
      "path": "test-python-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
projen==99.99.99
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "test_python_project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python_project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python_project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
  "tests/__init__.py": "",
  "tests/test_example.py": "import pytest

from test_python_project.example import hello

@pytest.mark.parametrize(
    (\\"name\\", \\"expected\\"),
    [
        (\\"A. Musing\\", \\"Hello A. Musing!\\"),
        (\\"traveler\\", \\"Hello traveler!\\"),
        (\\"projen developer\\", \\"Hello projen developer!\\"),
    ],
)
def test_hello(name, expected):
    \\"\\"\\"Example test with parametrization.\\"\\"\\"
    assert hello(name) == expected
",
}
`;

exports[`dependencies 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "hypothesis",
        "type": "devenv",
        "version": "^6.0.3",
      },
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
      Object {
        "name": "pytest",
        "type": "devenv",
        "version": "6.2.1",
      },
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
        "version": "*",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "test-python-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "test-python-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "test-python-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "test-python-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "test-python-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "test-python-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "test-python-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "test-python-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "test-python-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "test-python-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "test-python-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "test-python-project/Logger",
        },
        "Pip": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pip",
          "path": "test-python-project/Pip",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "test-python-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "test-python-project/Projenrc",
        },
        "Pytest": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pytest",
          "path": "test-python-project/Pytest",
        },
        "PytestSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PytestSample",
          "path": "test-python-project/PytestSample",
        },
        "PythonSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PythonSample",
          "path": "test-python-project/PythonSample",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "test-python-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "test-python-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "test-python-project/Tasks",
        },
        "Venv": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Venv",
          "path": "test-python-project/Venv",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "test-python-project/VsCode",
        },
        "requirements-dev.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements-dev.txt",
          "path": "test-python-project/requirements-dev.txt",
        },
        "requirements.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements.txt",
          "path": "test-python-project/requirements.txt",
        },
        "test_python_project": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "test_python_project",
          "path": "test-python-project/test_python_project",
        },
        "tests": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "tests",
          "path": "test-python-project/tests",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "test-python-project",
      "path": "test-python-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
projen==99.99.99
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core>=0.0.0
Django==3.1.5
",
  "test_python_project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python_project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python_project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
  "tests/__init__.py": "",
  "tests/test_example.py": "import pytest

from test_python_project.example import hello

@pytest.mark.parametrize(
    (\\"name\\", \\"expected\\"),
    [
        (\\"A. Musing\\", \\"Hello A. Musing!\\"),
        (\\"traveler\\", \\"Hello traveler!\\"),
        (\\"projen developer\\", \\"Hello projen developer!\\"),
    ],
)
def test_hello(name, expected):
    \\"\\"\\"Example test with parametrization.\\"\\"\\"
    assert hello(name) == expected
",
}
`;

exports[`dependencies via ctor 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "hypothesis",
        "type": "devenv",
        "version": "^6.0.3",
      },
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
      Object {
        "name": "pytest",
        "type": "devenv",
        "version": "6.2.1",
      },
      Object {
        "name": "aws-cdk.core",
        "type": "runtime",
      },
      Object {
        "name": "Django",
        "type": "runtime",
        "version": "3.1.5",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
        "steps": Array [
          Object {
            "exec": "pytest",
          },
        ],
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "test-python-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "test-python-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "test-python-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "test-python-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "test-python-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "test-python-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "test-python-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "test-python-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "test-python-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "test-python-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "test-python-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "test-python-project/Logger",
        },
        "Pip": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pip",
          "path": "test-python-project/Pip",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "test-python-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "test-python-project/Projenrc",
        },
        "Pytest": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pytest",
          "path": "test-python-project/Pytest",
        },
        "PytestSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PytestSample",
          "path": "test-python-project/PytestSample",
        },
        "PythonSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PythonSample",
          "path": "test-python-project/PythonSample",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "test-python-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "test-python-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "test-python-project/Tasks",
        },
        "Venv": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Venv",
          "path": "test-python-project/Venv",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "test-python-project/VsCode",
        },
        "requirements-dev.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements-dev.txt",
          "path": "test-python-project/requirements-dev.txt",
        },
        "requirements.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements.txt",
          "path": "test-python-project/requirements.txt",
        },
        "test_python_project": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "test_python_project",
          "path": "test-python-project/test_python_project",
        },
        "tests": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "tests",
          "path": "test-python-project/tests",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "test-python-project",
      "path": "test-python-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
hypothesis>=6.0.3, <7.0.0
projen==99.99.99
pytest==6.2.1
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
aws-cdk.core
Django==3.1.5
",
  "test_python_project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python_project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python_project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
  "tests/__init__.py": "",
  "tests/test_example.py": "import pytest

from test_python_project.example import hello

@pytest.mark.parametrize(
    (\\"name\\", \\"expected\\"),
    [
        (\\"A. Musing\\", \\"Hello A. Musing!\\"),
        (\\"traveler\\", \\"Hello traveler!\\"),
        (\\"projen developer\\", \\"Hello projen developer!\\"),
    ],
)
def test_hello(name, expected):
    \\"\\"\\"Example test with parametrization.\\"\\"\\"
    assert hello(name) == expected
",
}
`;

exports[`no pytest 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes linguist-generated
/.github/workflows/pull-request-lint.yml linguist-generated
/.github/workflows/stale.yml linguist-generated
/.gitignore linguist-generated
/.projen/** linguist-generated
/.projen/deps.json linguist-generated
/.projen/files.json linguist-generated
/.projen/tasks.json linguist-generated
/requirements-dev.txt linguist-generated
/requirements.txt linguist-generated",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    steps:
      - uses: amannn/action-semantic-pull-request@v3.4.6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
          requireScope: false
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-pr-message: Closing this pull request as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-pr-label: stale
          exempt-pr-labels: backlog
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen activity for a while. Add a comment or it will be closed soon. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          close-issue-message: Closing this issue as it hasn't seen activity for a while. Please add a comment @mentioning a maintainer to reopen. If you wish to exclude this issue from being marked as stale, add the \\"backlog\\" label.
          stale-issue-label: stale
          exempt-issue-labels: backlog
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/stale.yml
/.env
!/requirements.txt
!/requirements-dev.txt
__pycache__/
*.py[cod]
*$py.class
*.so
.Python
build/
develop-eggs/
dist/
downloads/
eggs/
.eggs/
lib/
lib64/
parts/
sdist/
var/
wheels/
share/python-wheels/
*.egg-info/
.installed.cfg
*.egg
MANIFEST
*.manifest
*.spec
pip-log.txt
pip-delete-this-directory.txt
htmlcov/
.tox/
.nox/
.coverage
.coverage.*
.cache
nosetests.xml
coverage.xml
*.cover
*.py,cover
.hypothesis/
.pytest_cache/
cover/
*.mo
*.pot
*.log
local_settings.py
db.sqlite3
db.sqlite3-journal
instance/
.webassets-cache
.scrapy
docs/_build/
.pybuilder/
target/
.ipynb_checkpoints
profile_default/
ipython_config.py
__pypackages__/
celerybeat-schedule
celerybeat.pid
*.sage.py
.env
.venv
env/
venv/
ENV/
env.bak/
venv.bak/
.spyderproject
.spyproject
.ropeproject
/site
.mypy_cache/
.dmypy.json
dmypy.json
.pyre/
.pytype/

cython_debug/
",
  ".projen/deps.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "dependencies": Array [
      Object {
        "name": "projen",
        "type": "devenv",
        "version": "99.99.99",
      },
    ],
  },
  ".projen/files.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "files": Array [
      ".gitattributes",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/stale.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "requirements-dev.txt",
      "requirements.txt",
    ],
  },
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "env": Object {
      "PATH": "$(echo $PWD/.env/bin:$PATH)",
      "VIRTUAL_ENV": "$(echo $PWD/.env)",
    },
    "tasks": Object {
      "build": Object {
        "description": "Full release build",
        "name": "build",
        "steps": Array [
          Object {
            "spawn": "default",
          },
          Object {
            "spawn": "pre-compile",
          },
          Object {
            "spawn": "compile",
          },
          Object {
            "spawn": "post-compile",
          },
          Object {
            "spawn": "test",
          },
          Object {
            "spawn": "package",
          },
        ],
      },
      "compile": Object {
        "description": "Only compile",
        "name": "compile",
      },
      "default": Object {
        "description": "Synthesize project files",
        "name": "default",
        "steps": Array [
          Object {
            "exec": "python .projenrc.py",
          },
        ],
      },
      "eject": Object {
        "description": "Remove projen from the project",
        "env": Object {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": Array [
          Object {
            "spawn": "default",
          },
        ],
      },
      "install": Object {
        "description": "Install and upgrade dependencies",
        "name": "install",
        "steps": Array [
          Object {
            "exec": "pip install --upgrade pip",
          },
          Object {
            "exec": "pip install -r requirements.txt",
          },
          Object {
            "exec": "pip install -r requirements-dev.txt",
          },
        ],
      },
      "package": Object {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": Object {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": Object {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": Object {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  ".projen/tree.json": Object {
    "tree": Object {
      "children": Object {
        ".gitattributes": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitattributes",
          "path": "test-python-project/.gitattributes",
        },
        ".gitignore": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".gitignore",
          "path": "test-python-project/.gitignore",
        },
        ".projen--files.json": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": ".projen--files.json",
          "path": "test-python-project/.projen--files.json",
        },
        "Dependencies": Object {
          "children": Object {
            ".projen--deps.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--deps.json",
              "path": "test-python-project/Dependencies/.projen--deps.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Dependencies",
          "path": "test-python-project/Dependencies",
        },
        "GitHub": Object {
          "children": Object {
            "Mergify": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Mergify",
              "path": "test-python-project/GitHub/Mergify",
            },
            "PullRequestLint": Object {
              "children": Object {
                "pull-request-lint": Object {
                  "children": Object {
                    ".github--workflows--pull-request-lint.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--pull-request-lint.yml",
                      "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint/.github--workflows--pull-request-lint.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "pull-request-lint",
                  "path": "test-python-project/GitHub/PullRequestLint/pull-request-lint",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "PullRequestLint",
              "path": "test-python-project/GitHub/PullRequestLint",
            },
            "Stale": Object {
              "children": Object {
                "stale": Object {
                  "children": Object {
                    ".github--workflows--stale.yml": Object {
                      "constructInfo": Object {
                        "fqn": "constructs.Construct",
                        "version": "10.0.78",
                      },
                      "id": ".github--workflows--stale.yml",
                      "path": "test-python-project/GitHub/Stale/stale/.github--workflows--stale.yml",
                    },
                  },
                  "constructInfo": Object {
                    "fqn": "constructs.Construct",
                    "version": "10.0.78",
                  },
                  "id": "stale",
                  "path": "test-python-project/GitHub/Stale/stale",
                },
              },
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": "Stale",
              "path": "test-python-project/GitHub/Stale",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "GitHub",
          "path": "test-python-project/GitHub",
        },
        "Logger": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Logger",
          "path": "test-python-project/Logger",
        },
        "Pip": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Pip",
          "path": "test-python-project/Pip",
        },
        "ProjectBuild": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "ProjectBuild",
          "path": "test-python-project/ProjectBuild",
        },
        "Projenrc": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Projenrc",
          "path": "test-python-project/Projenrc",
        },
        "PythonSample": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "PythonSample",
          "path": "test-python-project/PythonSample",
        },
        "README.md": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "README.md",
          "path": "test-python-project/README.md",
        },
        "Tasks": Object {
          "children": Object {
            ".projen--tasks.json": Object {
              "constructInfo": Object {
                "fqn": "constructs.Construct",
                "version": "10.0.78",
              },
              "id": ".projen--tasks.json",
              "path": "test-python-project/Tasks/.projen--tasks.json",
            },
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Tasks",
          "path": "test-python-project/Tasks",
        },
        "Venv": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "Venv",
          "path": "test-python-project/Venv",
        },
        "VsCode": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "VsCode",
          "path": "test-python-project/VsCode",
        },
        "requirements-dev.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements-dev.txt",
          "path": "test-python-project/requirements-dev.txt",
        },
        "requirements.txt": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "requirements.txt",
          "path": "test-python-project/requirements.txt",
        },
        "test_python_project": Object {
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.0.78",
          },
          "id": "test_python_project",
          "path": "test-python-project/test_python_project",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.0.78",
      },
      "id": "test-python-project",
      "path": "test-python-project",
    },
    "version": "tree-0.1",
  },
  "README.md": "# replace this",
  "requirements-dev.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
projen==99.99.99
",
  "requirements.txt": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
",
  "test_python_project/__init__.py": "__version__ = \\"0.1.0\\"
",
  "test_python_project/__main__.py": "from .example import hello

if __name__ == \\"__main__\\":
    name = input(\\"What is your name? \\")
    print(hello(name))
",
  "test_python_project/example.py": "def hello(name: str) -> str:
    \\"\\"\\"A simple greeting.
    Args:
        name (str): Name to greet.
    Returns:
        str: greeting message
    \\"\\"\\"
    return f\\"Hello {name}!\\"
",
}
`;
